2012-06-11

	* src/filesel.c: win32: follow Windows shortcut (.lnk).

2012-06-06

	* version 3.2.0beta8

2012-06-06

	* src/inc.c: properly detect DNS lookup error when
	  session_connect_full() failed immediately.

2012-05-31

	* libsylph/session.[ch]
	  libsylph/socket.[ch]
	  src/inc.[ch]
	  src/send_message.c: differentiate DNS lookup error from connection
	  errors.
	* libsylph/imap.c
	  libsylph/nntp.c: fixed resource leak on SOCKS connection failure.

2012-05-30

	* nsis/sylpheed.nsi: reserve nsProcess.dll file to speed up the launch
	  of installer.

2012-05-30

	* src/compose.c: compose_send(): fixed a bug that messages could not
	  be sent with POP before SMTP enabled ([sylpheed-jp:11173]).

2012-05-30

	* manual/ja/*.html
	  manual/ja/Makefile.am: convert the encoding of HTML files to UTF-8
	  (prevents garbled character with IE).

2012-05-28

	* src/textview.c
	  src/compose.c: properly set line-space for auto-wrapped lines
	  (fixes Bug #64).

2012-05-18

	* src/main.c: open compose window before receiving on startup
	  (fixes Bug #61).

2012-05-02

	* src/compose.c: compose_attach_append(): fixed Bug #54: Focus problem
	  when reediting/forwarding emails after attachment deleted

2012-05-02

	* src/compose.c: when queueing messages or saving to draft folder,
	  disable them while mail checking only if queue or draft folder is
	  on IMAP server.
	* src/mainwindow.c: disabled Send button while mail check is running.

2012-05-02

	* src/inc.c: use a flag to distinguish the state of activity.

2012-04-27

	* src/compose.c: cancel sending if new mail check is running.

2012-04-24

	* src/about.c: updated copyright year.

2012-04-23

	* libsylph/utils.[ch]
	  libsylph/libsylph-0.def: added play_sound() function (works only on
	  Windows).
	* libsylph/prefs_common.[ch]
	  src/prefs_common_dialog.c
	  src/inc.c: win32: added an option to play sound when new messages
	  arrive.

2012-04-20

	* libsylph/imap.c: imap_remove_msgs_by_seq_set(): workaround for