@@ -1,3 +1,8 @@
+2012-06-12
+
+	* src/filesel.c: win32: handle multiple file selection with shortcuts.
+	  Follow folder link on save mode.
+
 2012-06-11
 
 	* src/filesel.c: win32: follow Windows shortcut (.lnk).
